nav z-index fixed

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -66,7 +66,7 @@
     left: 0;  */
     background-color: #24282B;
     position: fixed;
-    z-index: 9999;
+    z-index: 9999999999;
     display: flex;
     flex-flow: column;
     height: 100%;
